# Fruit-Vanguard

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
CMakeModules/: GenerateSCMRev.cmake
src/: CMakeLists.txt
src/citra_qt/: CMakeLists.txt  bootmanager.cpp  bootmanager.h  main.cpp  main.h
src/citra_qt/configuration/: config.cpp  configure_system.cpp  configure_system.ui
src/common/: assert.h
src/core/: CMakeLists.txt  core.cpp  core.h
src/core/cheats/: cheats.cpp
src/vanguard/: CMakeLists.txt  Helpers.hpp  VanguardClient.cpp  VanguardClient.h  VanguardClientInitializer.h  VanguardSettingsWrapper.h
src/vanguardwrapper/: CMakeLists.txt  UnmanagedWrapper.cpp  UnmanagedWrapper.h  UnmanagedWrapper2.cpp  UnmanagedWrapper2.h
